fix scrollbar OK

--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -288,8 +288,9 @@ div.list {
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 
-	list::-webkit-scrollbar {
-		display: none;
+	::-webkit-scrollbar {
+		width: 0;  /* Remove scrollbar space */
+		background: transparent;  /* Optional: just make scrollbar invisible */
 	}
 
 	@media (height < 1000px) {
